@@ -1,5 +1,10 @@
 2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>
 
+	* src/totem-video-indexer.c: (main):
+	* src/totem-video-thumbnailer.c: (main): Convert to GIO.
+
+2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>
+
 	* src/plugins/publish/totem-publish.c:
 	(totem_publish_plugin_stream_cb), (totem_publish_plugin_media_cb):
 	Convert the Publish plugin to GIO. (Closes: #512589)
